Barebone first section almost done, pc crash reboo

--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section id="presentation">
+            <div class="container card-cont flex">
+                <div class="presentation-cards"></div>
+                <div class="presentation-cards"></div>
+                <div class="presentation-cards"></div>
+                <div class="presentation-cards"></div>
+                <div class="presentation-cards"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
