--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav id="navigator" class="flex container">
             <img src="img/logo.png" alt="logo">
             <div class="flex">
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars fa-2x"></i>
                 <ul class="flex">
                     <li><a href="index.html">Planning</a></li>
                     <li><a href="about.html">Testimonials</a></li>
