second section: planning Barebone complete

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
                 <div class="presentation-cards"></div>
             </div>
         </section>
+        <section id="planning">
+            <div class="planning-cont container flex">
+                <div class="col flex">
+                    <img src="" alt="">
+                    <h2>Strategic Planning</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae est exercitationem, omnis atque suscipit dignissimos possimus veritatis voluptatibus aliquid ipsam magnam vero modi. Quas, iste nisi maiores natus adipisci veritatis.</p>
+                </div>
+                <!-- todo remove class -->
+                <img class="img" src="" alt="">
+            </div>
+        </section>
     </main>
 </body>
 </html>
