Testimonials barebone completed

--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sito Responsive</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="style.css">
 </head>
+
+
+
 <body>
+
+    <!-- Header -->
+
+
     <header>
         <nav id="navigator" class="flex container">
             <img src="img/logo.png" alt="logo">
@@ -24,6 +34,9 @@
         </nav>
     </header>
     <main>
+
+        <!-- Presentation section -->
+
         <section id="presentation">
             <div class="container card-cont flex">
                 <div class="presentation-cards"></div>
@@ -33,6 +46,9 @@
                 <div class="presentation-cards"></div>
             </div>
         </section>
+
+        <!-- planning section -->
+
         <section id="planning">
             <div class="planning-cont container flex">
                 <div class="col flex">
@@ -44,6 +60,40 @@
                 <img class="img" src="" alt="">
             </div>
         </section>
+
+
+        <!-- testimonials section -->
+
+        <section id="testimonials">
+            <div class="container">
+                <div>
+                    <p>TESTIMONIALS</p>
+                    <h2>We are committed expert partners</h2>
+                    <p></p>
+                </div>
+                <div class="testimonial-container">
+                    <div class="testimonials-card">
+                        <img src="" alt="">
+                        <p></p>
+                        <address></address>
+                    </div>
+                    <div class="testimonials-card">
+                        <img src="" alt="">
+                        <p></p>
+                        <address></address>
+                    </div>
+                    <div class="testimonials-card">
+                        <img src="" alt="">
+                        <p></p>
+                        <address></address>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
     </main>
 </body>
 </html>
