Benefits section barebone completed

--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
         </section>
 
 
+        <!-- Benefits section -->
+
+
+        <section id="benefits" >
+            <div class="container">
+                <h2>Benefits of working with us</h2>
+                <div class="row">
+                    <div class="benefits-col">
+                        <div class="card">
+    
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
     </main>
