Get started section barebones completed

--- a/index.html
+++ b/index.html
@@ -109,7 +109,35 @@
         </section>
 
 
+        <!-- About Us section -->
 
+        <section id="about" class="container">
+            <div class="col">
+                <img src="" alt="">
+                <p></p>
+                <p></p>
+            </div>
+            <div class="col">
+                <img src="" alt="">
+                <h2></h2>
+                <a href="#"></a>
+            </div>
+        </section>
+
+
+        <!-- get started session -->
+
+        <section id="getstarted">
+            <div class="container">
+                <div>Get started</div>
+                <h2>Simple, Transparent Pricing</h2>
+                <h1>It's Free</h1>
+                <p>We are still in beta and we will for a while. As we add more functionality, we'll look into other plans with more controls.</p>
+                <a href="#">Get started</a>
+                <div>Copyright 2021 boolean         classe XX         Privacy policy</div>
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
