footer section barebones completed

--- a/index.html
+++ b/index.html
@@ -136,8 +136,18 @@
                 <a href="#">Get started</a>
                 <div>Copyright 2021 boolean         classe XX         Privacy policy</div>
             </div>
-
-        </section>
+        </section>    
     </main>
+
+
+
+    <!-- footer section -->
+    
+    <footer>
+        <div class="container">
+            <div> Lorem ipsum dolor sit amet consectetur, adipisicing elit. At aut ab earum quod nobis! Ut, dicta. Alias, impedit? Dolorum culpa officia illum facere, a rerum eaque eligendi voluptas aliquid ratione.</div>
+            <div></div>
+        </div>
+    </footer>
 </body>
 </html>
