--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li><a href="about.html">Testimonials</a></li>
                     <li><a href="contact.html">Features</a></li>
                     <li><a href="contact.html">About Us</a></li>
+                    <li><a class="white-btn" href="contact.html">Get Started</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,7 +40,12 @@
 
         <section id="presentation">
             <div class="container card-cont flex">
-                <div class="presentation-cards"></div>
+                <div class="presentation-cards">
+                    <h3>Get a demo application</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia perspiciatis adipisci inventore. Libero fugit ratione quis, dolorum nam numquam quas quasi aliquam ipsam doloribus. Atque earum amet laborum quis assumenda!</p>
+                    <a href="#"><i class="fa-brands fa-apple"></i> App Store</a>
+                    <img class="phone" src="img/phone.png" alt="phone">
+                </div>
                 <div class="presentation-cards"></div>
                 <div class="presentation-cards"></div>
                 <div class="presentation-cards"></div>
